# bubble

./: README.md  const.py  main.py  pyproject.toml
assets/: imagineBubbles.xcf  kid_head.xcf
